--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap');
 
+:root {
+    --default-box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
 *,*::after,*::before {
     padding: 0;
     margin: 0;
@@ -10,6 +14,7 @@ body {
     min-height: 100vh;
     display: grid;
     grid-template-rows: minmax(100px, 1fr) 6.5fr;
+    background-color: hsl(220, 27%, 96%);
 }
 
 header {
@@ -18,9 +23,28 @@ header {
     align-items: center;
     font-size: 1.6rem;
     background: linear-gradient(to right, #dbe6f6, #c5796d);
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    box-shadow: var(--default-box-shadow);
 }
 
 main {
-    background-color: hsl(220, 27%, 96%);
+    margin: 1rem;
+    display: grid;
+    grid-template-rows: 1fr 6fr;
+}
+
+section:nth-child(1) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+button {
+    padding: 1rem 1.25rem; 
+    border-radius: 20px;
+    border: 3px dashed black;
+    cursor: pointer;
+    background-color: #c5796d;
+    box-shadow: var(--default-box-shadow);
+    font-size: 1.2rem;
+    font-weight: 700;
 }
