--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,14 @@ button {
     font-size: 1.2rem;
     font-weight: 700;
 }
+
+.pop-up {
+    display: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.overlay {
+    display: hidden;
+}
