--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ section:nth-child(1) {
     align-items: center;
 }
 
-button {
+.addBook {
     padding: 1rem 1.25rem; 
     border-radius: 20px;
     border: 3px dashed black;
@@ -50,7 +50,7 @@ button {
 }
 
 .pop-up {
-    display: fixed;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
