--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap');
 
 :root {
     --default-box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    --blueish: #dbe6f6;
+    --whiteish: hsl(220, 27%, 96%);
+    --brownish: #c5796d;
 }
 
 *,*::after,*::before {
@@ -22,7 +25,7 @@ header {
     justify-content: center;
     align-items: center;
     font-size: 1.6rem;
-    background: linear-gradient(to right, #dbe6f6, #c5796d);
+    background: linear-gradient(to right, var(--blueish), var(--brownish));
     box-shadow: var(--default-box-shadow);
 }
 
@@ -43,7 +46,7 @@ section:nth-child(1) {
     border-radius: 20px;
     border: 3px dashed black;
     cursor: pointer;
-    background-color: #c5796d;
+    background-color: var(--brownish);
     box-shadow: var(--default-box-shadow);
     font-size: 1.2rem;
     font-weight: 700;
@@ -54,6 +57,56 @@ section:nth-child(1) {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    border: 3px solid black;
+    border-radius: 10px;
+    padding: 10px 50px;
+    font-size: 1.3rem;
+    background-color: var(--whiteish);
+    z-index: 10;
+}
+
+form > h2 {
+    text-align: center;
+}
+
+form > div {
+    padding-top: 10px;
+}
+
+div > label {
+    font-weight: 500;
+}
+
+div > input {
+    border-radius: 10px;
+    border: 2px solid black;
+    padding: 2px;
+    font-size: 1.1rem;
+    font-weight: 300;
+}
+
+.pop-up-radio-container {
+    display: flex;
+    column-gap: 5px;
+}
+
+.pop-up-radio-container > label[for="read"] {
+    margin-right: auto;
+}
+
+.pop-up-btn-container {
+    text-align: center;
+}
+
+.pop-up-btn {
+    padding: 0.5rem 0.75rem; 
+    border-radius: 20px;
+    border: 3px dashed black;
+    cursor: pointer;
+    background-color: var(--brownish);
+    box-shadow: var(--default-box-shadow);
+    font-size: 1.1rem;
+    font-weight: 700;
 }
 
 .overlay {
