stylizing library card

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&display=swap');
 
 :root {
     --default-box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
@@ -39,6 +40,49 @@ section:nth-child(1) {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+section:nth-child(2) {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 150px);
+    grid-auto-rows: 200px;
+    gap: 30px;
+}
+
+.library-card {
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 1rem 2rem;
+    text-align: center;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    column-gap: 20px;
+    font-family: 'Montserrat', sans-serif !important;
+    font-size: 1.1rem;
+    position: relative;
+
+}
+
+.library-card > h3:nth-child(1) {
+    font-weight: 800;
+    font-style: italic;
+}
+
+.library-card > h3 {
+    font-weight: 400;
+}
+
+.colour-strip {
+    position: absolute;
+    width: 100%;
+    height: 15px;
+    border-top-right-radius: 6px;
+    border-top-left-radius: 6px;
+    background-color: blue;
+    left: 0;
+    top: 0px;
 }
 
 .add-book {
