--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ section:nth-child(2) {
     grid-template-columns: repeat(auto-fit, 150px);
     grid-auto-rows: 200px;
     gap: 30px;
+    padding: 2rem 4rem 2rem 5rem;
 }
 
 .library-card {
@@ -80,7 +81,7 @@ section:nth-child(2) {
     height: 15px;
     border-top-right-radius: 6px;
     border-top-left-radius: 6px;
-    background-color: blue;
+    /*background-color: blue;*/
     left: 0;
     top: 0px;
 }
