--- a/styles.css
+++ b/styles.css
@@ -44,10 +44,9 @@ section:nth-child(1) {
 
 section:nth-child(2) {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 150px);
     grid-auto-rows: 230px;
-    gap: 30px;
-    padding: 2rem 4rem 2rem 5rem;
+    margin: 0 auto;
+    /*padding: 2rem 4rem 2rem 5rem;*/
 }
 
 .library-card {
