added a way to remove library cards from page

--- a/createdCardElements.css
+++ b/createdCardElements.css
@@ -8,7 +8,7 @@
     align-items: center;
     font-size: 1.3rem;
     padding: 0.5rem 2rem;
-    column-gap: 20px;
+    column-gap: 30px;
 }
 
 .title-text { 
@@ -31,6 +31,7 @@
     border-radius: 50%;
     width: 10px;
     height: 10px;
+    cursor: pointer;
 }
 
 .read-no-text {
@@ -38,10 +39,12 @@
     border-radius: 50%;
     width: 10px;
     height: 10px;
+    cursor: pointer;
 }
 
 .del-btn {
     background-image: url('images/delete.png');
     width: 24px;
     height: 24px;
+    cursor: pointer;
 }
