--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ section:nth-child(2) {
     grid-template-columns: minmax(600px, 1000px);
     grid-auto-rows: 50px;
     margin: 0 auto;
+    row-gap: 10px;
     /*padding: 2rem 4rem 2rem 5rem;*/
 }
 
